--- a/_layouts/admin.html
+++ b/_layouts/admin.html
@@ -19,6 +19,9 @@
   </head>
   <body>
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="page-location">
+        <a href="index.html" class="site-image"><img src="images/rdwrc_logo_tiny.jpg"></a>
+      </div>
       <ul class="nav navbar-nav">
         <li class="active"><a href="admin.html"><i class="icon-home"></i> Home</a></li>
         <li><a href="manage_users.html"><i class="icon-user"></i> Users</a></li>
