--- a/_layouts/article_winter.html
+++ b/_layouts/article_winter.html
@@ -19,9 +19,10 @@
   </head>
   <body>
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <ul class="navbar-header">
-        <li class="active"><h3><a href="rdwrc_winter.html">The Ralph D. Winter archives</a></h3></li>
-      </ul>
+      <div class="page-location">
+        <a href="index.html" class="site-image"><img src="images/rdwrc_logo_tiny.jpg"></a>
+        <a href="rdwrc_winter.html"><h3>The Ralph D. Winter archives</h3></a>
+      </div>
       <form class="navbar-form" role="search">
         <div class="input-group">
           <input type="text" class="form-control" placeholder="search The Ralph D. Winter archives">
