--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -19,6 +19,9 @@
   </head>
   <body>
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="page-location">
+        <a href="index.html" class="site-image"><img src="images/rdwrc_logo_tiny.jpg"></a>
+      </div>
       <ul class="nav navbar-nav">
         <li class="active"><a href="index.html">Home</a></li>
         <li><a href="calendar.html">Calendar</a></li>
