fix more HTML errors

--- a/_layouts/article_winter.html
+++ b/_layouts/article_winter.html
@@ -36,7 +36,7 @@
     </div>
 
     <div class="content article">
-      <img class="img-rounded pull-right img-responsive" src="Lausanne_1974/Lausanne_1974_wordle_medium.png" />
+      <img class="img-rounded pull-right img-responsive" src="Lausanne_1974/Lausanne_1974_wordle_medium.png" alt="Lausanne 1974 top words"/>
       <h2>{{ page.title }}</h2>
       {% if page.date or page.event %}
         <h4> {{ page.date }} {{ page.event }} </h4>
