--- a/_layouts/article_winter.html
+++ b/_layouts/article_winter.html
@@ -23,21 +23,18 @@
         <a href="index.html"><img src="images/rdwrc_logo_tiny.jpg" alt="Home"></a>
         <a href="rdwrc_winter.html"><h3>The Ralph D. Winter archives</h3></a>
       </div>
-      <form class="navbar-form" role="search">
-        <div class="input-group">
-          <input type="text" class="form-control" placeholder="search The Ralph D. Winter archives">
-          <span class="input-group-btn">
-            <button type="submit" class="btn btn-default">
-              <i class="icon-search"></i>
-            </button>
-          </span>
-        </div>
-      </form>
+      {% include search.html %}
     </div>
 
     <div class="content article">
-      <img class="img-rounded pull-right img-responsive" src="Lausanne_1974/Lausanne_1974_wordle_medium.png" alt="Lausanne 1974 top words"/>
-      <h2>{{ page.title }}</h2>
+      {% if page.title == 'The Highest Priority - Cross-Cultural Evangelism' %}
+        <img class="img-rounded pull-right img-responsive" src="Lausanne_1974/Lausanne_1974_wordle_medium.png" alt="Lausanne 1974 top words"/>
+      {% endif %}
+
+      {% if page.title %}
+        <h2>{{ page.title }}</h2>
+      {% endif %}
+
       {% if page.date or page.event %}
         <h4> {{ page.date }} {{ page.event }} </h4>
       {% endif %}
@@ -46,7 +43,9 @@
         <h5>{{ page.location }}</h5>
       {% endif %}
 
-      <h5>Ralph D. Winter</h5>
+      {% if page.author %}
+        <h5>{{ page.author }}</h5>
+      {% endif %}
 
       {% if page.original %}
         <p><a href="{{ page.original }}">Original Article</a></p>
