--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -29,16 +29,7 @@
         <li id="contact_nav_link"><a href="rdwrc_contact.html">Contact</a></li>
       </ul>
 
-      <form class="navbar-form" role="search">
-        <div class="input-group">
-          <input type="text" class="form-control" placeholder="search all archives">
-          <span class="input-group-btn">
-            <button type="submit" class="btn btn-default">
-              <i class="icon-search"></i>
-            </button>
-          </span>
-        </div>
-      </form>
+      {% include search.html %}
     </div>
 
     <div class="content">
