change copyright to be right aligned

--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class="footer">
-      <p class="right">&copy; 2014 The Ralph D. Winter Research Center </p>
+      <p class="pull-right">&copy; 2014 The Ralph D. Winter Research Center </p>
     </div>
   </body>
 </html>
