--- a/_layouts/admin.html
+++ b/_layouts/admin.html
@@ -35,7 +35,7 @@
     </div>
 
     <div class="footer">
-      <p class="right">&copy; 2014 The Ralph D. Winter Research Center </p>
+      <p class="pull-right">&copy; 2014 The Ralph D. Winter Research Center </p>
     </div>
   </body>
 </html>
