--- a/_includes/search.html
+++ b/_includes/search.html
@@ -1,4 +1,4 @@
-    <form class="navbar-form" role="search">
+    <form class="navbar-form navbar-right" role="search">
       <div class="input-group">
         <span class="input-group-btn">
           <span class="btn btn-default" onclick="search_text_changed(); show_search_results();">
