--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -18,16 +18,11 @@
     <script src="javascripts/application.js"></script>
   </head>
   <body>
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="page-location">
-        <a href="index.html"><img src="images/rdwrc_logo_tiny.jpg" alt="Home"></a>
-        <a href="rdwrc_winter.html"><h3>The Ralph D. Winter archives</h3></a>
-      </div>
-      {% include search.html %}
-    </div>
+    {% include navigation.html %}
 
     <main role="main">
       <div class="container">
+        <h1 class="title">{{ page.which }}</h1>
         <div class="content article">
           <div class="row">
             <div class="span12">
