--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -18,22 +18,11 @@
     <script src="javascripts/application.js"></script>
   </head>
   <body>
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="page-location">
-        <a href="index.html"><img src="images/rdwrc_logo_tiny.jpg" alt="Home"></a>
-      </div>
-      <ul class="nav nav-pills">
-        <li id="index_nav_link"><a href="index.html">Home</a></li>
-        <li id="calendar_nav_link"><a href="rdwrc_calendar.html">Calendar</a></li>
-        <li id="past_events_nav_link"><a href="rdwrc_past_events.html">Past Events</a></li>
-        <li id="contact_nav_link"><a href="rdwrc_contact.html">Contact</a></li>
-      </ul>
-
-      {% include search.html %}
-    </div>
+    {% include navigation.html %}
 
     <main role="main">
       <div class="container">
+        <h1 class="title">{{ page.title }}</h1>
         <div class="content article">
           <div class="row">
             <div class="span12">
