update layouts to use breadcrumbs use new 4.0.3 version of Font Awesome add winter categories for files that exist update admin pages for site and content to use default content

--- a/_includes/search.html
+++ b/_includes/search.html
@@ -2,13 +2,13 @@
       <div class="input-group">
         <span class="input-group-btn">
           <span class="btn btn-default" onclick="search_text_changed(); show_search_results();">
-            <i class="icon-search"></i>
+            <i class="fa fa-search"></i>
           </span>
         </span>
         <input type="text" class="form-control" placeholder="search all archives">
         <span class="input-group-btn">
           <span class="btn btn-default" onclick="clear_search_text()">
-            <i class="icon-remove"></i>
+            <i class="fa fa-times"></i>
           </span>
         </span>
       </div>
