--- a/_layouts/admin.html
+++ b/_layouts/admin.html
@@ -9,7 +9,7 @@
 
     <title>{{ page.title }}</title>
 
-    <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="stylesheets/application.css" media="screen">
 
@@ -23,10 +23,10 @@
         <a href="index.html"><img src="images/rdwrc_logo_tiny.jpg" alt="Home"></a>
       </div>
       <ul class="nav navbar-nav">
-        <li class="active"><a href="admin.html"><i class="icon-home"></i> Home</a></li>
-        <li><a href="manage_users.html"><i class="icon-user"></i> Users</a></li>
-        <li><a href="manage_content.html"><i class="icon-file"></i> Content</a></li>
-        <li><a href="manage_site.html"><i class="icon-sitemap"></i> Site</a></li>
+        <li class="active"><a href="admin.html"><i class="fa fa-home"></i> Home</a></li>
+        <li><a href="manage_users.html"><i class="fa fa-user"></i> Users</a></li>
+        <li><a href="manage_content.html"><i class="fa fa-file"></i> Content</a></li>
+        <li><a href="manage_site.html"><i class="fa fa-sitemap"></i> Site</a></li>
       </ul>
     </div>
 
